Refactor of user flow. Killing Facebook OmniAuth for now

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,19 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  provider: MyString
-  uid: MyString
-  name: MyString
-  oauth_token: MyString
-  oauth_expires_at: 2016-09-24 15:03:19
+  first_name: MyString
+  last_name: MyString
+  email: MyString
+  strava_link: MyString
   admin: false
-  racer_id: 1
 
 two:
-  provider: MyString
-  uid: MyString
-  name: MyString
-  oauth_token: MyString
-  oauth_expires_at: 2016-09-24 15:03:19
+  first_name: MyString
+  last_name: MyString
+  email: MyString
+  strava_link: MyString
   admin: false
-  racer_id: 1
