--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  order: MyString
+  item: MyString
   user_id: 1
   delivered: false
-  quantiy: 1
+  quantity: 1
 
 two:
-  order: MyString
+  item: MyString
   user_id: 1
   delivered: false
-  quantiy: 1
+  quantity: 1
