Adding tests for current_streak / longest_streak

--- a/test/fixtures/racers.yml
+++ b/test/fixtures/racers.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
+  id: 1
+  first_name: Max
+  last_name: Metcalfe
 
 two:
-  first_name: MyString
-  last_name: MyString
+  id: 2
+  first_name: Julia
+  last_name: Metcalfe
