--- a/test/fixtures/races.yml
+++ b/test/fixtures/races.yml
@@ -1,4 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
   id: 1
@@ -11,3 +10,7 @@ two:
 three:
   id: 3
   date: 2017-06-14
+
+four:
+  id: 4
+  date: 2017-10-11
