--- a/test/fixtures/results.yml
+++ b/test/fixtures/results.yml
@@ -1,4 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
   rank: 1
@@ -13,5 +12,13 @@ two:
   bib: 1
   racer_id: 1
   race_id: 2
+  group_name: ALL
+  time: 00:21:00.0
+
+three:
+  rank: 1
+  bib: 1
+  racer_id: 1
+  race_id: 4
   group_name: ALL
   time: 00:21:00.0
