--- a/test/fixtures/results.yml
+++ b/test/fixtures/results.yml
@@ -38,3 +38,11 @@ five:
   race_id: 1
   group_name: ALL
   time: 00:34:00.0
+
+six:
+  rank: 200
+  bib: 20
+  racer_id: 4
+  race_id: 1
+  group_name: ALL
+  time: 00:41:00.0
