Add some basic model tests for Order.

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,12 +1,12 @@
 
-one:
-  item: MyString
+hat:
+  item: "The Divis"
   user_id: 1
   delivered: false
   quantity: 1
 
-two:
-  item: MyString
+shirt:
+  item: "4YT-Shirt"
   user_id: 1
   delivered: false
   quantity: 1
