Add test for collect_time() for case where a result already exists.

--- a/test/fixtures/results.yml
+++ b/test/fixtures/results.yml
@@ -46,3 +46,11 @@ six:
   race_id: 1
   group_name: ALL
   time: 00:41:00.0
+
+seven:
+  rank: 3
+  bib: 20
+  racer_id: 3
+  race_id: 4
+  group_name: ALL
+  time: "a nice little string"
