--- a/test/fixtures/start_items.yml
+++ b/test/fixtures/start_items.yml
@@ -3,6 +3,7 @@ one:
   racer_id: 1
   start_time: 2016-12-06 21:31:04
   end_time: 2016-12-06 22:31:04
+  group: "ALL"
   bib: 1
   race_id: 1
 
@@ -10,5 +11,6 @@ two:
   racer_id: 2
   start_time: 2016-12-06 21:31:04
   end_time: 2016-12-06 21:10:04
+  group: "ALL"
   bib: 1
   race_id: 1
