--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,11 @@ jobs:
       matrix:
         ruby-version: ['2.5.8']
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up Ruby ${{ matrix.ruby-version }}
+    - uses: actions/checkout@v2
+    - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true
     - name: Run tests
-      run: bundle exec appraisal ${{ matrix.rails-version }} rake
+      run: bundle exec rake
